--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
                         <span onclick="allPlayers()" class="input-group-text" id="search-btn">Search
                     </div>
                 </div>
+                <h3 id="not-found" class="text-danger">This is not found</h3>
+                <img src="spinner/spinner.gif" id="spinner" class="w-25" alt="">
                 <div id="player-container" class="player-container">
                 
                 </div>
             </div>
             <div class="col-md-6 w-100 m-auto text-center">
                 <h3>right side</h3>
+                <div class="image-container">
+                    <img src="image/male.jpg" id="male" class="w-50 rounded" alt="">
+                    <img src="image/female.jpg" id="female" class="w-50 rounded" alt="">
+                </div>
+                <div id="details-container" class="details-container">
+                    
+                </div>
             </div>
         </div>
     </div>
